    - Added an "api" file containing useful routines that can be called by external UberASM files (sadly not from other library files if using standard UberASMTool). For now it only has two, one to reset the current level's checkpoint, and one to reset all checkpoints, but more can be added in the future. For information on how to use them see "docs/api.html".

v0.5.1:
    - Improved speed of Retry prompt drawing.
    - Now the sprite status bar's coin counter and Yoshi Coins display use different tiles (they both look like the standard coin tile by default).
    - Now the sprite status bar's Yoshi Coins counter auto detects how many coins need to be displayed in levels when having collected all of them, even if the amount is hex edited in the ROM or the "Per Level Yoshi Coins Amount" patch is used. Additionally, the counter will work properly if the amount is more than 5.
    - Updated the "ram_map.txt" doc to a better readable HTML document.

v0.5.0:
    - Small documentation updates.
    - Fixed bonus game 1UPs still moving while the Retry prompt is active (only when !prompt_freeze = 2).
    - Implemented sprite status bar that can be enabled with the !sprite_status_bar setting and configured from the settings and the tables in "sprite_status_bar_tables.asm".

v0.4.6:
    - Updated custom midway instructions with more clear guide (thanks to AmperSam for providing them).
    - Fixed occasional respawn issues when using UberASMTool 2.0 Beta.

v0.4.5:
    - Fixed integration with lx5's Custom Powerups (thanks to NixKillsMyths for reporting this):
      - Fixed compilation error when using both Retry and the Custom Powerups.
      - Removed redundant code in "level_init_3.asm" that is already run in the Custom Powerups UberASM.
    - Fixed Sumo Bro's Lightning falling while the Retry prompt is active (only when !prompt_freeze = 2).